# ArduinoScope

./: .gitignore  .gitlab-ci.yml  .travis.yml  ArduinoScope.sublime-workspace  CMakeLists.txt  LICENSE.txt  README.md  arduinoscope.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parameters.ui  resource.qrc  version.h
arduino/: arduinoconnectiondlg.cpp  arduinoconnectiondlg.h  arduinoconnectiondlg.ui  serialportreader.cpp  serialportreader.h
documentation/: README.md
documentation/arduino/: README.md
documentation/arduino/DummyDuino/: DummyDuino.ino
documentation/arduino/thermocouples/one_thermocouple/: one_thermocouple.ino
documentation/arduino/thermocouples/three_thermocouples/: three_thermocouples.ino
documentation/arduino/thermocouples/two_thermocouples/: two_thermocouples.ino
qcustomplot/: qcustomplot.cpp  qcustomplot.h
sensordatahandler/: sensordatahandler.cpp  sensordatahandler.h
